force-app/main/default/objects/RCA__c/RCA__c.object-meta.xml
<CustomObject>
    <description>Object to support Root Cause Analysis.</description>
    <label>Root Cause Analysis</label>
    <nameField>
        <displayFormat>RCA-{0000000}</displayFormat>
        <label>RCA Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Root Cause Analysis</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>