force-app/main/default/objects/RCA__c/fields/AAR__c.field-meta.xml
<CustomField>
    <fullName>AAR__c</fullName>
    <label>AAR #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>