force-app/main/default/objects/RCA__c/fields/AAR_Record_Link__c.field-meta.xml
<CustomField>
    <fullName>AAR_Record_Link__c</fullName>
    <label>AAR Record Link</label>
    <type>Url</type>
</CustomField>