force-app/main/default/objects/RCA__c/fields/Action_Plan__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan__c</fullName>
    <label>Action Plan in Scrumforce</label>
    <type>Url</type>
</CustomField>