force-app/main/default/objects/RCA__c/fields/Action_Plan_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan_Completion_Date__c</fullName>
    <label>Action Plan Completion Date</label>
    <type>Date</type>
</CustomField>