force-app/main/default/objects/RCA__c/fields/Action_Plan_Summary__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan_Summary__c</fullName>
    <label>Action Plan Summary</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>