force-app/main/default/objects/RCA__c/fields/Bug__c.field-meta.xml
<CustomField>
    <fullName>Bug__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bug</label>
    <referenceTo>ADM_Work__c</referenceTo>
    <relationshipLabel>Root Cause Analysis</relationshipLabel>
    <relationshipName>RCA_Bug</relationshipName>
    <type>Lookup</type>
</CustomField>