force-app/main/default/objects/RCA__c/fields/Category_Other__c.field-meta.xml
<CustomField>
    <fullName>Category_Other__c</fullName>
    <inlineHelpText>We all hate the other field but over time this free text field might give us a good indication of what we are missing in the previous category fields.</inlineHelpText>
    <label>Root Cause Category (Other)</label>
    <type>TextArea</type>
</CustomField>