force-app/main/default/objects/RCA__c/fields/Customer_Impacting__c.field-meta.xml
<CustomField>
    <fullName>Customer_Impacting__c</fullName>
    <label>Customer Impacting</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>