force-app/main/default/objects/RCA__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <label>Duration</label>
    <length>15</length>
    <type>Text</type>
</CustomField>