force-app/main/default/objects/RCA__c/fields/Incident_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Incident_End_Time__c</fullName>
    <label>Incident End Time</label>
    <type>DateTime</type>
</CustomField>