force-app/main/default/objects/RCA__c/fields/Incident_Participants__c.field-meta.xml
<CustomField>
    <fullName>Incident_Participants__c</fullName>
    <label>Incident Participants</label>
    <type>TextArea</type>
</CustomField>