force-app/main/default/objects/RCA__c/fields/Incident_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Incident_Start_Time__c</fullName>
    <label>Incident Start Time</label>
    <type>DateTime</type>
</CustomField>