force-app/main/default/objects/RCA__c/fields/Message_Requestor__c.field-meta.xml
<CustomField>
    <fullName>Message_Requestor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Tier 3 case owner who requested the messaging on behalf of the customer.</inlineHelpText>
    <label>Message Requestor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Root_Cause_Analysis2</relationshipName>
    <type>Lookup</type>
</CustomField>