force-app/main/default/objects/RCA__c/fields/RCA_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>RCA_Completed_Date__c</fullName>
    <inlineHelpText>Date when the RCA owner finishes filling in the details.</inlineHelpText>
    <label>RCA Completed Date</label>
    <type>Date</type>
</CustomField>