force-app/main/default/objects/RCA__c/fields/RCA_Invitees__c.field-meta.xml
<CustomField>
    <fullName>RCA_Invitees__c</fullName>
    <label>RCA Invitees</label>
    <type>TextArea</type>
</CustomField>