force-app/main/default/objects/RCA__c/fields/RCA_Participants__c.field-meta.xml
<CustomField>
    <fullName>RCA_Participants__c</fullName>
    <label>RCA Participants</label>
    <type>TextArea</type>
</CustomField>