force-app/main/default/objects/RCA__c/fields/RCA_Status__c.field-meta.xml
<CustomField>
    <fullName>RCA_Status__c</fullName>
    <inlineHelpText>Allows the team to see how many RCA records are still pending completion.</inlineHelpText>
    <label>RCA Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>RCA Complete</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Closed - RCA Complete</fullName>
            </value>
            <value>
                <fullName>Closed - Action Plan Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>