force-app/main/default/objects/RCA__c/fields/RCM_Required__c.field-meta.xml
<CustomField>
    <fullName>RCM_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Designates whether or not messaging is required for a given incident.</description>
    <inlineHelpText>Check this box if a customer has requested formal root cause messaging.</inlineHelpText>
    <label>RCM Required</label>
    <type>Checkbox</type>
</CustomField>