force-app/main/default/objects/RCA__c/fields/Ready_for_Manager_Approval__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_Manager_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Messaging Owners: Check this box when the RCM is ready for manager approval.</inlineHelpText>
    <label>Ready for Manager Approval</label>
    <type>Checkbox</type>
</CustomField>