force-app/main/default/objects/RCA__c/fields/Release__c.field-meta.xml
<CustomField>
    <fullName>Release__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Gives the team the ability to tie the RCA records to specific releases in GUS to gather valuable metrics over time.</inlineHelpText>
    <label>Release</label>
    <referenceTo>ADM_Release__c</referenceTo>
    <relationshipLabel>Root Cause Analysis</relationshipLabel>
    <relationshipName>RCA_Release</relationshipName>
    <type>Lookup</type>
</CustomField>