force-app/main/default/objects/RCA__c/fields/Reported_By__c.field-meta.xml
<CustomField>
    <fullName>Reported_By__c</fullName>
    <label>Reported By</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>External Customer</fullName>
            </value>
            <value>
                <fullName>Internal Customer</fullName>
            </value>
            <value>
                <fullName>Monitoring</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>