force-app/main/default/objects/RCA__c/fields/Request_Details__c.field-meta.xml
<CustomField>
    <fullName>Request_Details__c</fullName>
    <defaultValue>&quot;Please include the Account Name, Contact Name &amp; Case Number of the messaging request.&quot;</defaultValue>
    <inlineHelpText>Please include the Account and Contact names, Case Number, and any other details related to this request</inlineHelpText>
    <label>Request Details</label>
    <type>TextArea</type>
</CustomField>