force-app/main/default/objects/RCA__c/fields/Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Review_Date__c</fullName>
    <inlineHelpText>Indicates when a particular RCA is reviewed in a given management meeting.</inlineHelpText>
    <label>Review Date</label>
    <type>Date</type>
</CustomField>