force-app/main/default/objects/RCA__c/fields/Root_Cause_Category__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause_Category__c</fullName>
    <inlineHelpText>Many more options are provided here to categorize the incident at a more granular level.</inlineHelpText>
    <label>Root Cause Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>RCA_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>3rd Party Variable</fullName>
            </value>
            <value>
                <fullName>Environment Disparity</fullName>
            </value>
            <value>
                <fullName>Customer-Specific Environment Issue</fullName>
            </value>
            <value>
                <fullName>Impact from Another Team</fullName>
            </value>
            <value>
                <fullName>Insufficient Automation</fullName>
            </value>
            <value>
                <fullName>Inadequate Test Coverage</fullName>
            </value>
            <value>
                <fullName>Inadequate Functional Design</fullName>
            </value>
            <value>
                <fullName>Misunderstood Dependencies</fullName>
            </value>
            <value>
                <fullName>Corner Case</fullName>
            </value>
            <value>
                <fullName>Known Issue that was Deprioritized</fullName>
            </value>
            <value>
                <fullName>Deficient Usability</fullName>
            </value>
            <value>
                <fullName>Documentation Issue</fullName>
            </value>
            <value>
                <fullName>Translation Issue</fullName>
            </value>
            <value>
                <fullName>Hardware/Network Issues</fullName>
            </value>
            <value>
                <fullName>Regression</fullName>
            </value>
            <value>
                <fullName>Autobuild Issue</fullName>
            </value>
            <value>
                <fullName>Code Checked into Incorrect Branch</fullName>
            </value>
            <value>
                <fullName>Staging/Promotion Issue</fullName>
            </value>
            <value>
                <fullName>Incorrect/Incomplete Code Released</fullName>
            </value>
            <value>
                <fullName>Release Runner Issues</fullName>
            </value>
            <value>
                <fullName>DICE Issues</fullName>
            </value>
            <value>
                <fullName>Application</fullName>
            </value>
            <value>
                <fullName>Configuration</fullName>
            </value>
            <value>
                <fullName>Database</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>Network</fullName>
            </value>
            <value>
                <fullName>Operator Error</fullName>
            </value>
            <value>
                <fullName>Release</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>Storage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>