force-app/main/default/objects/RCA__c/fields/Scrum_Team__c.field-meta.xml
<CustomField>
    <fullName>Scrum_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scrum Team</label>
    <referenceTo>ADM_Scrum_Team__c</referenceTo>
    <relationshipLabel>Root Cause Analysis</relationshipLabel>
    <relationshipName>RCA_Scrum_Team</relationshipName>
    <type>Lookup</type>
</CustomField>