force-app/main/default/objects/RCA__c/fields/Timeline_of_Events__c.field-meta.xml
<CustomField>
    <fullName>Timeline_of_Events__c</fullName>
    <label>Timeline of Events</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>