force-app/main/default/objects/RCA__c/fields/What_was_the_customer_impact__c.field-meta.xml
<CustomField>
    <fullName>What_was_the_customer_impact__c</fullName>
    <inlineHelpText>This answers the question of who was affected by the incident.  Was it all customers?  Only customers on NAX?</inlineHelpText>
    <label>What was the customer impact?</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>