force-app/main/default/objects/RCA__c/fields/Why_did_this_occur_2__c.field-meta.xml
<CustomField>
    <fullName>Why_did_this_occur_2__c</fullName>
    <defaultValue>&quot;Include the 5 reasons (why&#39;s) for the Incident - http://en.wikipedia.org/wiki/5_Whys&quot;</defaultValue>
    <inlineHelpText>“The 5 Whys is a question-asking method used to explore the cause/effect relationships underlying a particular problem. Ultimately, the goal of applying the 5 Whys method is to determine a root cause of a defect or problem.”</inlineHelpText>
    <label>Why did this occur?</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>