force-app/main/default/objects/RCA__c/recordTypes/Issue_Message.recordType-meta.xml
<RecordType>
    <fullName>Issue_Message</fullName>
    <active>true</active>
    <description>Choose this Record Type if the request for message does not meet RCM criteri but is  a P0 bug, a P1 or P2 bug with significant customer impact (10+ customers or top customer), or by management (Support or Technology) request</description>
    <label>Issue Message</label>
</RecordType>