force-app/main/default/objects/RCA__c/recordTypes/RCA_Only.recordType-meta.xml
<RecordType>
    <fullName>RCA_Only</fullName>
    <active>true</active>
    <description>Choose this record type if this is a request only for a Root Cause Analysis (no messaging request).</description>
    <label>RCA Only</label>
</RecordType>