force-app/main/default/objects/RCA__c/recordTypes/RCA_RCM_Request.recordType-meta.xml
<RecordType>
    <fullName>RCA_RCM_Request</fullName>
    <active>true</active>
    <description>Choose this record type if a customer has requested an RCM and this meets the criteria for an RCA</description>
    <label>RCA/RCM Request</label>
</RecordType>