force-app/main/default/objects/RCA__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RCA_Status__c</columns>
    <columns>Scrum_Team__c</columns>
    <columns>Assignee__c</columns>
    <columns>Root_Cause_Category__c</columns>
    <columns>Release__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>